// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  Hello world
</p>
`;

exports[`composition hook should return with Code props 1`] = `
Object {
  "className": "css-1wdukht css-63it0p css-jwhr8m bb-Box bb-Code",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

<code
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Code"
>
  hello world
</code>
`;

exports[`defaultProps should render correctly for palette 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-primaryTint,#000000);
  border-radius: 2px;
  color: var(--bb-palette-primary700,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

<code
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  hello world
</code>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

<code
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  Hello world
</code>
`;

exports[`props should render correctly as a block 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

.emotion-0 {
  padding: 1rem;
}

<pre
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  Hello world
</pre>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

.emotion-2 {
  color: var(--bb-palette-primary,#000000) !important;
}

<code
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  Hello world
</code>
`;

exports[`props should render correctly with palette 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-primaryTint,#000000);
  border-radius: 2px;
  color: var(--bb-palette-primary700,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

<code
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  Hello world
</code>
`;

exports[`theming Code.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-white700,#000000);
  border-radius: 2px;
  color: var(--bb-palette-text,#000000);
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
  overflow: auto;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<code
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Code"
>
  hello world
</code>
`;
